# codevis

./: .clang-format  .dockerignore  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  catch2-local-includes.h.in  codevis.desktop  conanfile.py  iconset.icns  news.html  preferences.conf  preferences.cpp  preferences.h  preferences.kcfg  preferences.kcfgc  resources.qrc  test-project-paths.h.in  version.h.in
desktopapp/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  apptesting_fixture.cpp  apptesting_fixture.h  codevis.knsrc  codevis.notifyrc  codevis_dbus_interface.cpp  codevis_dbus_interface.h  codevisui.rc  dbustest.sh  desktopapp.m.cpp  desktopapp.qrc  mainwindow.cpp  mainwindow.h  mainwindow.t.cpp  mainwindow.ui  mainwindow_auto_add_edges_from_classes.t.cpp  mainwindow_auto_add_edges_from_components.t.cpp  mainwindow_auto_add_edges_from_packages.t.cpp  mainwindow_basic_application_workflow.t.cpp  mainwindow_fields.t.cpp  mainwindow_load_test_crash.t.cpp  mainwindow_show_error_on_add_edge_failure.t.cpp  mainwindow_test_autosave.t.cpp  mainwindow_test_element_move.t.cpp  mainwindow_test_tool_selection.t.cpp  org.kde.codevis.appdata.xml  org.kde.codevis.desktop  org.kde.codevis.metainfo.xml  org.kde.codevis_desktop.desktop  projectsettingsdialog.cpp  projectsettingsdialog.h  projectsettingsdialog.t.cpp  projectsettingsdialog.ui  qt.conf  testcrash.lks  testmainwindow.cpp  testmainwindow.h
lvtcgn/: CMakeLists.txt  codegen.qrc  codegenerator.js  ct_lvtcgn_app_adapter.cpp  ct_lvtcgn_app_adapter.h  ct_lvtcgn_app_adapter.t.cpp  ct_lvtcgn_codegendialog.cpp  ct_lvtcgn_codegendialog.h  ct_lvtcgn_codegendialog.t.cpp  ct_lvtcgn_codegendialog.ui  ct_lvtcgn_cogedentreemodel.cpp  ct_lvtcgn_cogedentreemodel.h  ct_lvtcgn_generatecode.cpp  ct_lvtcgn_generatecode.h  ct_lvtcgn_generatecode.t.cpp  ct_lvtcgn_js_file_wrapper.cpp  ct_lvtcgn_js_file_wrapper.h  ct_lvtcgn_testutils.cpp  ct_lvtcgn_testutils.h
lvtclp/: CMakeLists.txt  README.md  autogen-test-variables.h.in  ct_lvtclp_clputil.cpp  ct_lvtclp_clputil.h  ct_lvtclp_clputil.t.cpp  ct_lvtclp_compilerutil.cpp  ct_lvtclp_compilerutil.h  ct_lvtclp_compilerutil.t.cpp  ct_lvtclp_componentutil.cpp  ct_lvtclp_componentutil.h  ct_lvtclp_cpp_tool.cpp  ct_lvtclp_cpp_tool.h  ct_lvtclp_cpp_tool.t.cpp  ct_lvtclp_cpp_tool_constants.h  ct_lvtclp_create_codebase_db.m.cpp  ct_lvtclp_diagnostic_consumer.cpp  ct_lvtclp_diagnostic_consumer.h  ct_lvtclp_dumpdatabase.m.cpp  ct_lvtclp_filesystemscanner.cpp  ct_lvtclp_filesystemscanner.h  ct_lvtclp_filesystemscanner.t.cpp  ct_lvtclp_fileupdatemgr_physical.t.cpp  ct_lvtclp_fileutil.cpp  ct_lvtclp_fileutil.h  ct_lvtclp_headercallbacks.cpp  ct_lvtclp_headercallbacks.h  ct_lvtclp_logicaldepscanner.cpp  ct_lvtclp_logicaldepscanner.h  ct_lvtclp_logicaldepscanner.t.cpp  ct_lvtclp_logicaldepvisitor.cpp  ct_lvtclp_logicaldepvisitor.h  ct_lvtclp_logicalpostprocessutil.cpp  ct_lvtclp_logicalpostprocessutil.h  ct_lvtclp_logicalpostprocessutil.t.cpp  ct_lvtclp_merge_databases.m.cpp  ct_lvtclp_parse_error_handler.cpp  ct_lvtclp_parse_error_handler.h  ct_lvtclp_parse_error_handler.t.cpp  ct_lvtclp_physicaldepscanner.cpp  (+26 more)
lvtclr/: CMakeLists.txt  ct_lvtclr_colormanagement.cpp  ct_lvtclr_colormanagement.h  ct_lvtclr_colormanagement.t.cpp
lvtldr/: CMakeLists.txt  README.md  ct_lvtldr_alloweddependencyloader.cpp  ct_lvtldr_alloweddependencyloader.h  ct_lvtldr_alloweddependencyloader.t.cpp  ct_lvtldr_componentnode.cpp  ct_lvtldr_componentnode.h  ct_lvtldr_componentnodefields.h  ct_lvtldr_databasehandler.h  ct_lvtldr_freefunctionnode.cpp  ct_lvtldr_freefunctionnode.h  ct_lvtldr_freefunctionnodefields.h  ct_lvtldr_graphloader.cpp  ct_lvtldr_graphloader.h  ct_lvtldr_igraphloader.cpp  ct_lvtldr_igraphloader.h  ct_lvtldr_lakosianedge.cpp  ct_lvtldr_lakosianedge.h  ct_lvtldr_lakosiannode.cpp  ct_lvtldr_lakosiannode.h  ct_lvtldr_lakosiannode.t.cpp  ct_lvtldr_nodestorage.cpp  ct_lvtldr_nodestorage.h  ct_lvtldr_nodestorage.t.cpp  ct_lvtldr_nodestoragetestutils.h  ct_lvtldr_packagenode.cpp  ct_lvtldr_packagenode.h  ct_lvtldr_packagenodefields.h  ct_lvtldr_physicalloader.cpp  ct_lvtldr_physicalloader.h  ct_lvtldr_physicalloader.m.cpp  ct_lvtldr_repositorynode.cpp  ct_lvtldr_repositorynode.h  ct_lvtldr_repositorynodefields.h  ct_lvtldr_sociutils.h  ct_lvtldr_typenode.cpp  ct_lvtldr_typenode.h  ct_lvtldr_typenodefields.h
lvtmdb/: CMakeLists.txt  README.md  ct_lvtmdb.t.cpp  ct_lvtmdb_componentobject.cpp  ct_lvtmdb_componentobject.h  ct_lvtmdb_databaseobject.cpp  ct_lvtmdb_databaseobject.h  ct_lvtmdb_errorobject.cpp  ct_lvtmdb_errorobject.h  ct_lvtmdb_fieldobject.cpp  ct_lvtmdb_fieldobject.h  ct_lvtmdb_fileobject.cpp  ct_lvtmdb_fileobject.h  ct_lvtmdb_functionbase.cpp  ct_lvtmdb_functionbase.h  ct_lvtmdb_functionobject.cpp  ct_lvtmdb_functionobject.h  ct_lvtmdb_lockable.cpp  ct_lvtmdb_lockable.h  ct_lvtmdb_merge_multiple_db.t.cpp  ct_lvtmdb_methodobject.cpp  ct_lvtmdb_methodobject.h  ct_lvtmdb_namespaceobject.cpp  ct_lvtmdb_namespaceobject.h  ct_lvtmdb_objectstore.cpp  ct_lvtmdb_objectstore.h  ct_lvtmdb_packageobject.cpp  ct_lvtmdb_packageobject.h  ct_lvtmdb_repositoryobject.cpp  ct_lvtmdb_repositoryobject.h  ct_lvtmdb_soci_helper.h  ct_lvtmdb_soci_helper.t.cpp  ct_lvtmdb_soci_reader.cpp  ct_lvtmdb_soci_reader.h  ct_lvtmdb_soci_writer.cpp  ct_lvtmdb_soci_writer.h  ct_lvtmdb_typeobject.cpp  ct_lvtmdb_typeobject.h  ct_lvtmdb_util.cpp  ct_lvtmdb_util.h  (+3 more)
lvtmdl/: CMakeLists.txt  ct_lvtmdl_basetablemodel.cpp  ct_lvtmdl_basetablemodel.h  ct_lvtmdl_basetreemodel.cpp  ct_lvtmdl_basetreemodel.h  ct_lvtmdl_circular_relationships_model.cpp  ct_lvtmdl_circular_relationships_model.h  ct_lvtmdl_debugmodel.cpp  ct_lvtmdl_debugmodel.h  ct_lvtmdl_errorsmodel.cpp  ct_lvtmdl_errorsmodel.h  ct_lvtmdl_fieldstablemodel.cpp  ct_lvtmdl_fieldstablemodel.h  ct_lvtmdl_fieldstreemodel.cpp  ct_lvtmdl_fieldstreemodel.h  ct_lvtmdl_historylistmodel.cpp  ct_lvtmdl_historylistmodel.h  ct_lvtmdl_modelhelpers.cpp  (+20 more)
(+658 files in other folders)
